--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
         <div class="container">
             <div class="slider-wrapper" tabindex="0">
-                <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                <!-- immetto foto con vuejs -->
+                <div class="item"
+                v-for="(slide, index) in slides"
+                v-show="currentImage === index">
+                    <img :src="slide.image" :alt="slide.title" />
                     <div class="text">
-                        <h3>Spiderman</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <h3>{{slide.title}}</h3>
+                        <p>{{slide.text}}</p>
                     </div>
                 </div>
 
