--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <div class="slider-wrapper" tabindex="0">
                 <!-- immetto foto con vuejs -->
                 <div class="item"
-                v-for="(slide, index) in slides"
+                v-for="(item, index) in slides"
                 v-show="currentImage === index">
-                    <img :src="slide.image" :alt="slide.title" />
+                    <img :src="item.image" :alt="item.title" />
                     <div class="text">
-                        <h3>{{slide.title}}</h3>
-                        <p>{{slide.text}}</p>
+                        <h3>{{item.title}}</h3>
+                        <p>{{item.text}}</p>
                     </div>
                 </div>
 
@@ -32,8 +32,13 @@
                     <div class="prev"></div>
                     <div class="next"></div>
                     <!-- /bottoni -->
+                    <div v-for="(thumb, index) in slides" :key="index">
+                        <div class="thumb active">
+                            <img :src="thumb.image" :alt="thumb.title" />
+                        </div>
+                    </div>
 
-                    <div class="thumb active">
+                    <!-- <div class="thumb active">
                         <img src="img/01.webp" alt="Svezia" />
                     </div>
                     <div class="thumb">
@@ -47,7 +52,7 @@
                     </div>
                     <div class="thumb">
                         <img src="img/05.webp" alt="Avengers" />
-                    </div>
+                    </div> -->
                 </div>
                 <!-- /miniature -->
 
