--- a/index.html
+++ b/index.html
@@ -29,30 +29,18 @@
                 <!-- miniature -->
                 <div class="thumbs">
                     <!-- bottoni -->
-                    <div @click="imgPrev" class="prev"></div>
-                    <div @click="imgNext" class="next"></div>
+                    <div @click="imgNext" class="prev"></div>
+                    <div @click="imgPrev" class="next"></div>
                     <!-- /bottoni -->
-                    <div v-for="(thumb, index) in slides" :key="index">
-                        <div class="thumb" >
+                    <!-- immetto le miniature con vuejs -->
+                    <div v-for="(thumb, index) in slides">
+                        <div class="thumb" 
+                        :class="{active: currentImage === index}"
+                        @click="selectImg(index)">
                             <img :src="thumb.image" :alt="thumb.title" />
                         </div>
                     </div>
-
-                    <!-- <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.webp" alt="Ratchet & Clank" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.webp" alt="Fortnite" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.webp" alt="Stray" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.webp" alt="Avengers" />
-                    </div> -->
+                    <!-- /immetto le miniature con vuejs -->
                 </div>
                 <!-- /miniature -->
 
