--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div id="app" v-cloak>
 
         <div class="container">
-            <div class="slider-wrapper" tabindex="0">
+            <div class="slider-wrapper" tabindex="0"
+            @mouseenter="stopImg"
+            @mouseleave="startAutoplay">
                 <!-- immetto foto con vuejs -->
                 <div class="item"
                 v-for="(item, index) in slides"
