--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <!-- miniature -->
                 <div class="thumbs">
                     <!-- bottoni -->
+                    <!-- aggiungo un alscolto eventi -->
                     <div @click="imgNext" class="prev"></div>
                     <div @click="imgPrev" class="next"></div>
                     <!-- /bottoni -->
